reduce File video

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ button {
 <body>
 
 <video autoplay muted loop>
-    <source src="My Movie 1.mp4" type="video/mp4">
+    <source src="videoMemory.mp4" type="video/mp4">
 </video>
 
 <div class="card">
